some changes have been made

--- a/Black Friday predictor.ipynb
+++ b/Black Friday predictor.ipynb
@@ -1606,7 +1606,7 @@
    ],
    "source": [
     "plt.plot(cost_values)\n",
-    "plt.ylabel('Cost J')\n",
+    "plt.ylabel('Cost')\n",
     "plt.xlabel('Iterations');"
    ]
   },
